[package]
name = "plonky2-bls12-381-pairing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-std = "0.4.0"
num-bigint = "0.4.3"
num-traits = "0.2"
rand = "0.8.5"
num = "0.4.0"
serde = { version = "1.0.160", features = ["derive"] }
itertools = "0.10.5"
anyhow = "1.0.71"
hex = "0.4.3"
bitvec = "1"
rayon = "1.7.0"
plonky2 = {git="https://github.com/InternetMaximalism/plonky2", rev="541e127"}
plonky2_u32={git="https://github.com/InternetMaximalism/plonky2", rev="541e127"}
plonky2_ecdsa={git="https://github.com/InternetMaximalism/plonky2", rev="541e127"}
starky = {git="https://github.com/InternetMaximalism/plonky2", rev="541e127"}
plonky2-bls12-381={ git = "https://github.com/metacraft-labs/plonky2-bn254.git" }
starky-bn254={git="http://github.com/qope/starky-bn254", rev="2165be0"}